SubBt/force-app/main/default/objects/Tree_Configuration__c/Tree_Configuration__c.object-meta.xml
<CustomObject>
    <description>Tree configuration</description>
    <label>Tree Configuration</label>
    <nameField>
        <label>Tree Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tree Configurations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>