SubBt/force-app/main/default/objects/Tree_Configuration__c/fields/Checkable_Nodes__c.field-meta.xml
<CustomField>
    <fullName>Checkable_Nodes__c</fullName>
    <inlineHelpText>Provide comma separated list object that you want to display as selectable nodes in the tree. E.g. File__c, Folder__c</inlineHelpText>
    <label>Checkable Nodes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>