SubBt/force-app/main/default/objects/Tree_Configuration__c/fields/Number_of_Node_Path_Levels__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Node_Path_Levels__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Its level to display number of parent nodes in node path. With this it can display top most root node and that many immediate parent e.g. /rootnode/…/P2/P1/Node when number of parent nodes in node path = 2.</description>
    <inlineHelpText>Its level to display number of parent nodes in node path. With this it can display top most root node and that many immediate parent e.g. /rootnode/…/P2/P1/Node when number of parent nodes in node path = 2.</inlineHelpText>
    <label>Number of Node Path Levels</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>