SubBt/force-app/main/default/objects/Tree_Configuration__c/fields/Show_System_Default_Tree_Nodes__c.field-meta.xml
<CustomField>
    <fullName>Show_System_Default_Tree_Nodes__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked shows system default tree nodes along with configured tree nodes, else only displays configured tree nodes.</description>
    <label>Show System Default Tree Nodes</label>
    <type>Checkbox</type>
</CustomField>