SubBt/force-app/main/default/objects/Tree_Configuration__c/fields/Tree_Type__c.field-meta.xml
<CustomField>
    <fullName>Tree_Type__c</fullName>
    <description>Tree type where the node needs to be displayed.</description>
    <inlineHelpText>Tree type where the node needs to be displayed.</inlineHelpText>
    <label>Tree Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Files</fullName>
                <default>true</default>
                <label>Files</label>
            </value>
            <value>
                <fullName>Configuration</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Section</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>