SubBt/force-app/main/default/objects/Tree_Configuration__c/fields/Where_it_is_used1__c.field-meta.xml
<CustomField>
    <fullName>Where_it_is_used1__c</fullName>
    <description>Describe pages and features where this tree will be used in applications.</description>
    <inlineHelpText>Describe pages and features where this tree will be used in applications.</inlineHelpText>
    <label>Where it is used?</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>