SubBt/force-app/main/default/objects/Tree_Configuration__c/fields/Where_it_is_used__c.field-meta.xml
<CustomField>
    <fullName>Where_it_is_used__c</fullName>
    <description>Describe pages and features where this tree will be used in applications</description>
    <label>Where it used- deprecated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>